2005-03-11  Piotr Fusik  <fox@scene.pl>
* atari_x11.c: "-mouse" works. Set default clipping area to 336x240.
  x11-motif is now compilable, possibly also x11-xview.


2005-03-10  Piotr Fusik  <fox@scene.pl>
* atari_basic.c: updated for new Atari800_Frame()

* atari_sdl.c: corrected Atari_TRIG() and don't initialize sound on "-help"

* ui.c: "Extract ROM image from Cartridge" should skip the CART header,
  not just copy the whole file

* ui_basic.c: fixed a memory leak

* ui.[ch], atari.c, cpu.c: removed the unused "screen" parameter from ui()
  and SelectCartType()


2005-03-09  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: switched back to Atari800_Frame like all other ports do.
  So far everything looks OK. Why did Jacek abandon the Atari800_Frame
  way? Weird.
  Also finally disabled propagating of the KP0-KP9 keys to key_code.
  Without this the keyboard joystick emulation was mostly unusable.
  Needs a more general solution - masking out all keyboard joystick keys.
  Copy from atari_vga.c, it's solved properly there, IIRC.

* atari_x11.c: disabled propagating of the KP0-KP9 keys to key_code.

* configure.ac: enables linux joystick by default. The atari_x11.c needs
  a lot of cleanup: move the mouse emulation to input.c and make sure
  the keyboard joystick, mouse joystick and real joysticks do cope together.


2005-03-08  Piotr Fusik  <fox@scene.pl>
* antic.c: added missing combinations of ANTIC modes with GTIA modes.
  GTIA modes are correctly scrolled horizontally.

* compfile.c, devices.c, gtia.c, monitor.c, mzpokeysnd.c, sio.c, ui_basic.c:
  killed gcc -W warnings. Remained only the warnings about unused parameters.

* antic.c, input.c, dos/sound_dos.c: handle "-help" option


2005-03-05  Piotr Fusik  <fox@scene.pl>
* ui_basic.c: fixed "Error opening '' directory"

* input.[ch]: support AKEY_BREAK

* atari.[ch], atari_curses.c, atari_falcon.c, atari_svgalib.c, atari_x11.c,
  amiga/amiga.c, dos/atari_vga.c, win32/main.c, wince/port/atari_wince.c: