@@ -40,7 +40,7 @@ extern UBYTE KBCODE;
 extern UBYTE IRQST;
 extern UBYTE IRQEN;
 extern UBYTE SKSTAT;
-extern int DELAYED_SERIN_IRQ;
+extern SLONG DELAYED_SERIN_IRQ;
 extern int DELAYED_SEROUT_IRQ;
 extern int DELAYED_XMTDONE_IRQ;
 
